creating all docker components to test easily